# orgauth

./: .gitignore  .gitmodules  README.md  flake.nix
.github/workflows/: rust-clippy.yml
elm-gen/: Cargo.toml
elm-gen/src/: main.rs
rustlib/: Cargo.toml
rustlib/src/: data.rs  dbfun.rs  email.rs  endpoints.rs  error.rs  lib.rs  migrations.rs  util.rs
src/Orgauth/: AdminInterface.elm  ChangePassword.elm  ChangeRemoteUrl.elm  Data.elm  DataUtil.elm  Invited.elm  Login.elm  ShowUrl.elm  UserEdit.elm  UserId.elm  UserInterface.elm  UserInvite.elm  UserListing.elm
