[package]
name = "orgauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
env_logger = "0.5.13"
rusqlite = { version = "0.29.0", features = ["bundled"] }
log = "0.4.0"
actix-web = "4.3.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
futures = "0.1.25"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
uuid = { version = "0.8", features = ["serde", "v4"] }
sha256 = "1.1.4"
time = "0.2.27"
rand = "0.5.0"
toml = "0.5.9"
simple-error = "0.2.1"
json = "*"
lettre = "0.10.4"
barrel = { version = "0.7.0", features = ["sqlite3"] }
clap = "2.33.2"
timer = "0.2.0"
either = "1.6.1"
